@@ -40,6 +40,7 @@ namespace parity
 		bool showParityVersion(const char* option, const char* argument, bool& used);
 		bool setCtxDump(const char* option, const char* argument, bool& used);
 		bool setColorMode(const char* option, const char* argument, bool& used);
+		bool addConfigString(const char* option, const char* argument, bool& used);
 	}
 }
 
