@@ -417,7 +417,8 @@ namespace parity
 				//
 				// generate the symbol table.
 				//
-				threading.run(TaskStubs::runMsSymbolTableGenerator, &localSymbols, false);
+				if(!localSymbols.empty() && ctx.getGenerateSymbols())
+					threading.run(TaskStubs::runMsSymbolTableGenerator, &localSymbols, false);
 
 				//
 				// The third part is generating the import symbols for all static
@@ -444,7 +445,8 @@ namespace parity
 					// Now we generate a new Entrypoint function, that initializes the
 					// parity.runtime library (sets up exception handling, etc).
 					//
-					threading.run(TaskStubs::runMsPcrtInitEntryGenerator, NULL, false);
+					if(ctx.getGeneratePCRTEntry())
+						threading.run(TaskStubs::runMsPcrtInitEntryGenerator, NULL, false);
 
 					//
 					// need the parity.runtime library. for this to work, one need to set
